--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -9,8 +9,4 @@ python-multipart==0.0.6
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2
-email-validator==2.3.0
-requests==2.31.0
+gunicorn==21.2.0
