--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pydantic-settings==2.1.0
 python-dotenv==1.0.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
 httpx==0.25.2
 email-validator==2.3.0
 requests==2.31.0
